Update, clean up
Continue building up this maui app

--- a/NotSoForgottenCemetery/NotSoForgottenCemetery.csproj
+++ b/NotSoForgottenCemetery/NotSoForgottenCemetery.csproj
@@ -57,9 +57,30 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Aspose.PDF" Version="25.10.0" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
+		<PackageReference Include="Microsoft.VisualStudio.Utilities" Version="17.14.40264" />
+		<PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Pages\HomePage\HomePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\MemoryBoardPage\MemoryBoard.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\PlaylistPage\PlayListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="Pages\PlaylistPage\PlayListViewModel.cs" />
 	</ItemGroup>
 
 </Project>
